# ml-learning

./: .gitignore  poetry.toml  pyproject.toml  requirements.txt
docs/: debuggingml.md
notebooks/: model-dev.ipynb
notebooks/learn-architecture/: rnn.ipynb
notebooks/learn-loss/: classification.ipynb
notebooks/learn-sequence-model/: lstm-scratch-pytorch.ipynb  rnn-scratch-pytorch.ipynb  rnn.ipynb  transformer-scratch-pytorch.ipynb
notebooks/learn-timesieres/: prep.ipynb  ts-pytorch-lightling.ipynb
src/: __init__.py  data.py  main.py  params.json  train.py
src/data/: movielens.py
src/models/: __init__.py  gmf.py  mlp.py  ncf.py
