[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = [ "YC<intelchou@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "~2.1.0"
polars = "*"
scipy = "*"
seaborn = "^0.13.0"
torch = "^2.3.1"
torch-metrics = "^1.1.7"
tensorboard = "^2.17.0"
lightning = "^2.3.3"
transformers = "^4.42.4"
scikit-learn = "^1.5.1"
xgboost = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
graphviz = "*"
